--- a/src/app.css
+++ b/src/app.css
@@ -49,8 +49,8 @@
 }
 
 body {
-    background-color: #000;
-    color: white;
+    background-color: #ffffff;
+    color: #000000;
     margin: 0;
     padding: 0;
 }
